Lounge Activity layout with fragment organisation.

--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#215456</color>
+    <color name="colorPrimaryDark">#00363b</color>
+    <color name="colorAccentLight">#00ab8d</color>
+    <color name="colorAccent">#ffe324</color>
+    <color name="lightGrey">#9ba1a3</color>
+    <color name="white">#ffffff</color>
+    <color name="demo_white_semitransparent">#5fffffff</color>
+    <color name="demo_yellow_semitransparent">#70ffef14</color>
+    <color name="demo_green_semitransparent">#7a3ec722</color>
+    <color name="demo_blue_semitransparent">#71002df4</color>
+    <color name="demo_red_semitransparent">#56ff0000</color>
 </resources>
