--- a/SportsSideKick/app/src/main/res/drawable/button_onclick_change_text_color_login_home.xml
+++ b/SportsSideKick/app/src/main/res/drawable/button_onclick_change_text_color_login_home.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#9a000000" android:state_pressed="true"/>
+    <item android:color="@color/black_transparent_154" android:state_pressed="true"/>
     <item android:color="@android:color/white"/>
 </selector>
