--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_circle">10dp</dimen>
+    <dimen name="login_logo_ssk">15dp</dimen>
     <dimen name="half_margin">4dp</dimen>
     <dimen name="full_margin">8dp</dimen>
 </resources>
