--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -9,9 +9,33 @@
     </style>
 
     <style name="button_login_main">
-        <item name="android:textColor">@drawable/button_change_text_color</item>
+        <item name="android:textColor">@drawable/button_onclick_change_text_color_login_home</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:background">@drawable/button_login_main</item>
+        <item name="android:background">@drawable/button_login_home</item>
         <item name="android:padding">4dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="button_login_login">
+        <item name="android:textColor">@drawable/button_onclick_change_text_color_login_login</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_login_login</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="edit_text_login">
+        <item name="android:textColor">@color/lightGrey</item>
+        <item name="android:background">@drawable/button_login_home</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColorHint">@color/lightGrey</item>
     </style>
 </resources>
