--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -2,13 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.VideoChatFragment"
-    android:background="@color/demo_blue_semitransparent">
+    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.ChatFragment"
+    android:background="@color/demo_white_semitransparent">
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="36sp"
         android:textColor="@color/white"
         android:layout_centerInParent="true"
-        android:text="@string/video_chat_fragment_caption" />
+        android:text="@string/chat_caption" />
+
 </RelativeLayout>
