--- a/SportsSideKick/app/src/main/res/layout/fragment_quiz.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_quiz.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.StoreFragment">
+    tools:context="tv.sportssidekick.sportssidekick.fragment.instance.QuizFragment">
 
     <WebView
         android:id="@+id/web_view"
@@ -10,5 +10,4 @@
         android:layout_height="match_parent"
         android:visibility="visible">
     </WebView>
-
 </RelativeLayout>
