--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="demo_red_semitransparent">#56ff0000</color>
     <color name="light_green_1">#c3ff01</color>
     <color name="black_transparent_154">#9a000000</color>
+    <color name="facebook_blue">#3b5998</color>
 </resources>
