--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="button_login_main">
-        <item name="android:textColor">@drawable/button_onclick_change_text_color_login_home</item>
+        <item name="android:textColor">@drawable/button_onclick_change_text_color_initial</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:background">@drawable/button_login_home</item>
         <item name="android:padding">4dp</item>
@@ -19,9 +19,17 @@
     </style>
 
     <style name="button_login_login">
-        <item name="android:textColor">@drawable/button_onclick_change_text_color_login_login</item>
+        <item name="android:textColor">@drawable/button_onclick_change_text_color_login</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:background">@drawable/button_login_login</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="button_facebook">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/button_facebook</item>
         <item name="android:padding">4dp</item>
         <item name="android:minHeight">0dp</item>
         <item name="android:textSize">18sp</item>
