SignUp fragment, UserInfo, Firebase - create user. Merge

--- a/SportsSideKick/app/src/main/res/drawable/radio_button_checked_left.xml
+++ b/SportsSideKick/app/src/main/res/drawable/radio_button_checked_left.xml
@@ -7,6 +7,6 @@
 
     <shape android:shape="rectangle">
         <stroke android:width="2dp" android:color="@color/colorAccent" />
-        <solid android:color="@color/colorPrimary" />
+        <solid android:color="@color/green_dark_1" />
     </shape>
 </inset>
