--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -86,7 +86,7 @@
         android:layout_marginEnd="@dimen/half_margin"
         android:layout_toEndOf="@+id/left_tab_selector"
         android:layout_toStartOf="@+id/middle_split"
-        android:background="@color/colorPrimary">
+        android:background="@color/green_dark_1">
     </RelativeLayout>
 
 
@@ -101,7 +101,7 @@
         android:layout_marginStart="@dimen/half_margin"
         android:layout_toEndOf="@+id/middle_split"
         android:layout_toStartOf="@+id/right_tab_selector"
-        android:background="@color/colorPrimary">
+        android:background="@color/green_dark_1">
     </RelativeLayout>
 
     <RelativeLayout
@@ -113,7 +113,7 @@
         android:layout_marginStart="4dp"
         android:layout_toEndOf="@+id/middle_split"
         android:layout_toStartOf="@+id/right_tab_selector"
-        android:background="@color/colorPrimary"
+        android:background="@color/green_dark_1"
         android:padding="@dimen/full_margin">
     </RelativeLayout>
 
