--- a/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_club_radio.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:background="@color/colorPrimary"
+        android:background="@color/green_dark_1"
         android:scaleType="fitEnd"
         android:src="@drawable/radio_placeholder" />
     <TextView
