--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="Theme.AppCompat.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorAccentLight</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimaryDark</item>
+        <item name="colorControlNormal">@color/light_green_1</item>
+        <item name="colorControlActivated">@color/light_green_1</item>
+        <item name="colorControlHighlight">@color/light_green_1</item>
     </style>
 
     <style name="button_login_main">
@@ -31,6 +33,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:background">@drawable/button_facebook</item>
         <item name="android:padding">4dp</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:minHeight">0dp</item>
         <item name="android:textSize">18sp</item>
     </style>
@@ -45,5 +48,12 @@
         <item name="android:layout_margin">5dp</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColorHint">@color/lightGrey</item>
+    </style>
+
+    <style name="sign_up_edit_text">
+        <item name="android:textAlignment">center</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
