--- a/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_lounge.xml
@@ -32,26 +32,89 @@
             android:src="@drawable/sportingportugal" />
 
         <TextView
+            android:id="@+id/caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/scrolling_news_title"
             android:layout_toEndOf="@+id/logo"
-            android:paddingBottom="8dp"
-            android:text="@string/sporting_cp_title"
+            android:paddingBottom="@dimen/half_margin"
+            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="28sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/scrolling_news_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/logo"
+            android:layout_alignParentBottom="true"
             android:layout_toEndOf="@+id/logo"
-            android:paddingBottom="8dp"
-            android:text="@string/scrolling_news_demo_value"
-
+            android:paddingBottom="@dimen/half_margin"
             android:textColor="@color/white" />
+
+        <ImageView
+            android:id="@+id/logo_first_team"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/vs_label"
+            android:contentDescription="@string/demo"
+            android:padding="@dimen/half_margin"
+            android:scaleType="fitCenter" />
+
+        <ImageView
+            android:id="@+id/logo_second_team"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/demo"
+            android:padding="@dimen/half_margin"
+            android:scaleType="fitCenter" />
+
+        <TextView
+            android:id="@+id/vs_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/logo_second_team"
+            android:text="VS"
+            android:textColor="@color/white"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/days_until_match_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/time_of_match_label"
+            android:paddingBottom="@dimen/half_margin"
+            android:paddingEnd="@dimen/half_margin"
+            android:textColor="@color/colorAccentLight"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/time_of_match_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:paddingBottom="@dimen/half_margin"
+            android:paddingEnd="@dimen/half_margin"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/up_next_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_below="@+id/logo_second_team"
+            android:paddingEnd="@dimen/half_margin"
+            android:text="UP NEXT"
+            android:textColor="@color/white"
+            android:textSize="10sp" />
 
     </RelativeLayout>
 
@@ -66,6 +129,7 @@
         android:layout_marginTop="@dimen/full_margin"
         android:layout_toEndOf="@+id/middle_split"
         android:background="@color/white">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -86,9 +150,7 @@
         android:layout_marginEnd="@dimen/half_margin"
         android:layout_toEndOf="@+id/left_tab_selector"
         android:layout_toStartOf="@+id/middle_split"
-        android:background="@color/colorPrimary">
-    </RelativeLayout>
-
+        android:background="@color/colorPrimary"></RelativeLayout>
 
 
     <RelativeLayout
@@ -101,8 +163,7 @@
         android:layout_marginStart="@dimen/half_margin"
         android:layout_toEndOf="@+id/middle_split"
         android:layout_toStartOf="@+id/right_tab_selector"
-        android:background="@color/colorPrimary">
-    </RelativeLayout>
+        android:background="@color/colorPrimary"></RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/bottom_right_container"
@@ -114,8 +175,7 @@
         android:layout_toEndOf="@+id/middle_split"
         android:layout_toStartOf="@+id/right_tab_selector"
         android:background="@color/colorPrimary"
-        android:padding="@dimen/full_margin">
-    </RelativeLayout>
+        android:padding="@dimen/full_margin"></RelativeLayout>
 
     <RadioGroup
         android:id="@+id/left_tab_selector"
