Login activity changes, Fragment animation, Fragment management changes, Facebook integrated, Animations

--- a/SportsSideKick/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_forgot_password.xml
@@ -70,17 +70,32 @@
                 android:hint="@string/login_login_email"
                 android:inputType="textEmailAddress" />
 
-
-            <Button
-                android:id="@+id/forgot_password_resert_button"
-                style="@style/button_login_login"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginTop="10dp"
-                android:text="@string/forgot_password_button_text" />
+                android:layout_marginTop="10dp">
+
+                <Button
+                    android:id="@+id/forgot_password_resert_button"
+                    style="@style/button_login_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/forgot_password_button_text" />
+
+                <com.wang.avi.AVLoadingIndicatorView
+                    android:id="@+id/forgot_password_progress_bar"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:elevation="2dp"
+                    app:indicatorName="LineSpinFadeLoaderIndicator"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
     </LinearLayout>
