--- a/SportsSideKick/app/src/main/res/layout/fragment_sign_up.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_sign_up.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginBottom="60dp">
 
-        <Button
+        <com.facebook.login.widget.LoginButton
             android:id="@+id/sign_up_facebook"
             style="@style/button_facebook"
             android:layout_width="match_parent"
@@ -130,11 +130,12 @@
             android:textAllCaps="true" />
 
         <TextView
+            android:id="@+id/sign_up_terms_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/sign_up_text"
             android:textAlignment="center"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="0dp"
