--- a/SportsSideKick/app/src/main/res/values/styles.xml
+++ b/SportsSideKick/app/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
     <style name="sign_up_edit_text">
         <item name="android:textAlignment">center</item>
         <item name="android:maxLines">1</item>
-        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textColorHint">@color/lightGrey</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
