--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -11,11 +11,11 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="160dp"
-            android:contentDescription="@null"
-            android:src="@drawable/logo_sporting" />
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="160dp"-->
+            <!--android:contentDescription="@null"-->
+            <!--android:src="@drawable/logo_sporting" />-->
 
         <include layout="@layout/slide_text_login"/>
 
