--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,12 +19,12 @@
         android:layout_alignParentTop="true"
         android:background="@color/green_dark_1">
 
-        <ListView
-            android:id="@+id/chats_scroll_view"
+        <!-- A RecyclerView with some commonly used attributes -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/chat_heads_view"
+            android:scrollbars="none"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none|vertical">
-        </ListView>
+            android:layout_height="match_parent"/>
     </RelativeLayout>
 
     <ListView
@@ -91,4 +92,12 @@
             android:textSize="10sp" />
     </RelativeLayout>
 
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_bar"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_centerInParent="true"
+        android:elevation="2dp"
+        android:visibility="gone"
+        app:indicatorName="LineSpinFadeLoaderIndicator" />
 </RelativeLayout>
