--- a/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
@@ -54,7 +54,7 @@
     </RelativeLayout>
 
     <com.wang.avi.AVLoadingIndicatorView
-        android:id="@+id/login_login_progress_bar"
+        android:id="@+id/progress_bar"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_centerInParent="true"
