Chat info and participants count linked.  Image collage loading for chat icons.  Displaying of multimedia content in chat - image and audio.  Animation and transition from grid to list view for chat list.  IM Model refactoring to evade race conditions.

--- a/SportsSideKick/app/src/main/res/layout/add_chat_button.xml
+++ b/SportsSideKick/app/src/main/res/layout/add_chat_button.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<tv.sportssidekick.sportssidekick.util.SquareRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="60dp"
+    android:layout_height="wrap_content"
+    >
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:id="@+id/image"
+            android:layout_width="40dp"
+            android:layout_margin="10dp"
+            android:layout_height="40dp"
             android:background="@mipmap/create_chat_button"
             android:scaleType="centerInside"
             />
-</tv.sportssidekick.sportssidekick.util.SquareRelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/image"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:text = "ADD NEW CHAT"/>
+</RelativeLayout>
