--- a/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_head_item.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<tv.sportssidekick.sportssidekick.util.SquareRelativeLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="60dp"
+    android:layout_height="wrap_content"
     >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/container"
+        android:layout_alignParentTop="true"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:padding="8dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -19,6 +22,7 @@
 
             <ImageView
                 android:id="@+id/profile_image_1"
+                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -27,6 +31,7 @@
             <ImageView
                 android:id="@+id/profile_image_2"
                 android:layout_width="match_parent"
+                android:scaleType="centerCrop"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/demo_red_semitransparent" />
@@ -35,10 +40,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+         android:id="@+id/second_container"   android:orientation="vertical">
             <ImageView
                 android:id="@+id/profile_image_3"
                 android:layout_width="match_parent"
+                android:scaleType="centerCrop"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/demo_blue_semitransparent" />
@@ -46,6 +52,7 @@
             <ImageView
                 android:id="@+id/profile_image_4"
                 android:layout_width="match_parent"
+                android:scaleType="centerCrop"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/demo_yellow_semitransparent" />
@@ -53,19 +60,63 @@
     </LinearLayout>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
         android:id="@+id/mask"
         android:layout_centerInParent="true"
         android:src="@mipmap/chat_head_mask"/>
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
         android:visibility="gone"
         android:scaleType="centerCrop"
         android:id="@+id/selected"
         android:layout_centerInParent="true"
         android:src="@mipmap/chat_head_selected"/>
 
-</tv.sportssidekick.sportssidekick.util.SquareRelativeLayout>
+    <TextView
+        android:layout_below="@+id/container"
+        android:id="@+id/caption"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:text="Demo caption Demo caption Demo caption Demo caption"
+        android:gravity="center"
+        android:textSize="9sp"
+        android:textColor="@color/white"
+        />
+    <ImageView
+        android:id="@+id/people_icon"
+        android:layout_width="15dp"
+        android:layout_below="@+id/caption"
+    android:layout_centerHorizontal="true"
+        android:src="@mipmap/user_count_icon"
+        android:layout_height="15dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/people_count_value"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/people_icon"
+        android:layout_toEndOf="@+id/people_icon"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:text="3"/>
+    <TextView
+        android:id="@+id/edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp"
+        android:textSize="11sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/people_icon"
+        android:textColor="@color/colorAccent"
+        android:text="Edit"/>
+
+
+
+</RelativeLayout>
