--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
       android:layout_width="wrap_content"
     android:paddingTop="5dp"
     android:layout_height="wrap_content">
@@ -13,7 +12,6 @@
         android:id="@+id/profile_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/sportingportugal"
         android:layout_marginStart="8dp"
         app:civ_border_width="0dp"
         app:civ_border_color="#FF000000"/>
@@ -32,9 +30,18 @@
             android:text="Demo content."
             android:textSize="11sp"
             android:textColor="@color/white"/>
+
+        <ImageView
+            android:id="@+id/content_image"
+            android:maxHeight="80dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
+
     <TextView
-        android:id="@+id/timestamp"
+        android:id="@+id/sender"
         android:textSize="10sp"
         android:textColor="@color/white"
         android:layout_width="wrap_content"
@@ -43,6 +50,28 @@
         android:layout_below="@+id/content_container"
         android:layout_height="wrap_content"
         android:alpha="0.5"
-        android:text="Kyle | 7 mins ago"/>
+        android:text="Kyle"/>
+    <TextView
+        android:id="@+id/spliter"
+        android:textSize="10sp"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_toEndOf="@+id/sender"
+        android:layout_below="@+id/content_container"
+        android:layout_height="wrap_content"
+        android:alpha="0.5"
+        android:text=" | "/>
+
+    <TextView
+        android:id="@+id/timestamp"
+        android:textSize="10sp"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_toEndOf="@+id/spliter"
+        android:layout_below="@+id/content_container"
+        android:layout_height="wrap_content"
+        android:alpha="0.5"
+        android:text="7 mins ago"/>
+
 
 </RelativeLayout>
