--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimaryDark">#00ab8d</color>
     <color name="green_dark_1">#215456</color>
     <color name="green_dark_2">#00363b</color>
+    <color name="green_dark_2_semitransparent">#a800363b</color>
     <color name="light_green_2">#00ab8d</color>
     <color name="colorAccent">#ffe324</color>
     <color name="lightGrey">#9ba1a3</color>
