--- a/SportsSideKick/app/src/main/res/layout/activity_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,4 +15,13 @@
         android:id="@+id/login_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <com.wang.avi.AVLoadingIndicatorView
+        android:id="@+id/progress_bar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
+        android:elevation="2dp"
+        android:visibility="gone"
+        app:indicatorName="LineSpinFadeLoaderIndicator" />
 </RelativeLayout>
